#80752 fix gallery placeholder not showing on load

--- a/Snowdog_Components/components/Organisms/gallery/_gallery.scss
+++ b/Snowdog_Components/components/Organisms/gallery/_gallery.scss
@@ -122,6 +122,11 @@
             max-height: none;
         }
 
+        &:is(picture).ratio-image {
+            width: 100%;
+            height: 100%;
+        }
+
         &.ratio-image {
             @include mq($screen-l) {
                 top: 50%;
